sesion7/k8s-todo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-svc
  namespace: todo-app
  labels:
    app: todo-api
spec:
  selector:
    app: todo-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
