sesion7/k8s-todo/k8s/ingress.yaml
# Requiere: minikube addons enable ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
      - http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-api-svc
                port:
                  number: 80
